--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="barrio">Barrio</string>
     <string name="guardar">Guardar</string>
     <string name="borrar">Borrar</string>
+    <string name="estadoCV">Estado ciclo de vida</string>
 </resources>
